# mlx-atomistic

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.agent/steering/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATUS.md
.agent/wiki/: REPO-MAP.md
.agent/work/2026-05-20-force-field-completeness-file-parsers/: DESIGN.md  INTAKE.md  PLAN.md  SPEC.md
.agent/work/2026-05-20-md-feature-parity/: INTAKE.md
.agent/work/2026-05-20-md-integrator-constraint-parity/: DESIGN.md  PLAN.md  SPEC.md
.agent/work/2026-05-20-physics-completeness/: DESIGN.md  INTAKE.md  PLAN.md  SPEC.md
.agent/work/2026-05-22-performance-audit-harness-hardening/: DESIGN.md  INTAKE.md  PLAN.md  SPEC.md
.agent/work/2026-05-23-dhfr-benchmark-artifact-runtime/: DESIGN.md  PLAN.md  SPEC.md
.agent/work/2026-05-23-dhfr-runnable-benchmarks/: DESIGN.md  PLAN.md  SPEC.md
.agent/work/2026-05-23-mlx-benchmark-ladder-openmm-controlled-parity/: DESIGN.md  INTAKE.md  PLAN.md  SPEC.md
.agent/work/2026-05-23-same-workload-openmm-benchmark-comparison/: DESIGN.md  PLAN.md  SPEC.md
.agent/work/gpcrmd-critical-md-readiness/: DESIGN.md  PLAN.md  READINESS-HANDOFF.md  SLICE-1-GPCRMD-INVENTORY.md  SPEC.md
.agent/work/gpcrmd-mlx-real-md-target/: DESIGN.md  PLAN.md  SLICE-1-EVIDENCE.md  SPEC.md
.agent/work/gpcrmd-real-artifact-md-run/: DESIGN.md  PLAN.md  SPEC.md  VERIFY.md
.agent/work/lean-runtime-boundary-cleanup/: PLAN.md  SPEC.md  VERIFY.md
.agent/work/md-engine-capability-gap-matrix/: BACKLOG.md  EVIDENCE-INDEX.md  GAP-MATRIX.md  PLAN.md  SPEC.md
.agent/work/md-engine-gap-closure/: PLAN.md  SPEC.md
.agent/work/mlx-native-neighbor-pairs/: DESIGN.md  PLAN.md  SPEC.md  VERIFY.md
.agent/work/pme-ewald-periodic-electrostatics/: DESIGN.md  PLAN.md  PME-MESH-CHECKPOINT.md  SPEC.md  VERIFY.md
.github/workflows/: ci.yml  deploy-site.yml  workflow.yml
docs/: dft-foundations.md  dft-geometry-optimization.md  dft-numerics.md  dft-production-core.md  dft-pseudopotentials.md  dft-scf-core.md  md-acceleration.md  molecular-mechanics.md  production-md.md  real-mm-core.md  release.md  runtime-boundaries.md  testing.md  units.md  validation-and-performance.md
docs/benchmarks/: README.md  benchmark-ladder.md  gpcrmd-729-pme-runtime-m5max.md  inventory-gap-matrix.md  lammps-opencl-m5max.md  m5max-reference-engines.md  openmm-opencl-amber20.md  openmm-opencl-apoa1.md  openmm-opencl-dhfr.md  performance-audit-baseline.md  same-workload-comparison-matrix.md  same-workload-dhfr-stretch.md  same-workload-lj-scaling-m5max.md  same-workload-openmm-comparison.md  scalable-charged-pme-runtime-m5max.md  scalable-neighbor-nonbonded-runtime-m5max.md
notebooks/: 01-lj-md.ipynb  02-lj-md-performance.ipynb  03-molecular-mechanics.ipynb  07-scf-convergence.ipynb  09-dft-forces.ipynb  14-dft-pseudopotentials.ipynb  15-dft-ion-forces.ipynb  README.md
notebooks/archive/: README.md
notebooks/archive/atp-pocket-mlx-demo/: 01-jupyter-macromolecule-visualization.ipynb  README.md
notebooks/ligand-receptor-motion/: 01-ligand-receptor-translational-motion.ipynb  02-openmm-2000-step-preview.ipynb  03-openmm-charmm-pme-md-preview.ipynb  04-openmm-50k-sparse-preview.ipynb  OpenMM.ipynb  README.md
notebooks/workflows/: 01-md-molecular-mechanics.ipynb  02-md-validation-performance.ipynb  03-dft-density-scf.ipynb  04-dft-pseudopotentials-nonlocal.ipynb  05-dft-solvers-spin-kpoints.ipynb  06-dft-relaxation-reference.ipynb
scripts/: acquire_gpcrmd_fixture.py  benchmark_lammps_opencl.py  benchmark_m5max_reference.py  benchmark_openmm_dhfr.py  benchmark_openmm_opencl.py  build_production_md_blocker_matrix.py  check_dist_contents.py  fetch-vendors  gen_api_docs.py  openmm_mlx_parity.py  prepare_openmm_dhfr_implicit.py  run_bounded_process.py  run_charged_pme_parity.py  run_dft_runtime_oracle.py  run_gpcrmd_pme_parity.py  run_mlx_production_md_probe.py  run_openmm_gpcrmd_charmm_md.py  run_openmm_gpcrmd_preview.py  run_openmm_mlx_npt_parity.py  run_openmm_mlx_parity.py  run_openmm_production_md_reference.py  run_qe_silicon_reference.py  run_same_workload_lj_scaling.py  select_production_md_fixture.py
scripts/notebooks/: rebuild_workflow_notebooks.py
site/: README.md  astro.config.mjs  package-lock.json  package.json
site/og/: card.html
site/public/: robots.txt
site/src/: seo.mjs
site/src/pages/: index.astro
src/atomistic_prep/: __init__.py  cli.py  gpcrmd.py  gpcrmd_benchmark.py  io.py  notebook.py  prepare.py  production_pocket.py  replicas.py  runner.py  schema.py  solvated_example.py  t4l_benzene.py  topology_import.py
src/mlx_atomistic/: __init__.py  _artifact_identity.py  artifacts.py  cell_list.py  charmm_terms.py  compatibility.py  constraints.py  core.py  custom_force.py  diagnostics.py  examples.py  forcefields.py  gbsa.py  initialize.py  io.py  md.py  metal_kernels.py  minimize.py  mm.py  neighbors.py  nonbonded.py  pme.py  protocols.py  replica_exchange.py  runtime.py  steering.py  topology.py  trajectory_adapters.py  units.py  validation.py  virtual_sites.py  visualization.py
tests/: conftest.py  test_atomistic_prep.py  test_benchmarks.py  test_bounded_process.py  test_charmm_terms.py  test_checkpoint_restart.py  test_constraints.py  test_core.py  test_custom_force.py  test_dft.py  test_dft_batching.py  test_dft_carbon_eos.py  test_dft_compact.py  test_dft_incremental_davidson.py  test_dft_memory.py  test_dft_mgo_eos.py  test_dft_mgo_forces.py  test_dft_multispecies.py  test_dft_optimization.py  test_dft_periodic.py  test_dft_periodic_bands.py  test_dft_persistence.py  test_dft_production_core.py  test_dft_qe_parity.py  test_dft_runtime_harness.py  test_dft_runtime_metal.py  test_dft_scf_smell.py  test_dft_silicon.py  test_dft_silicon_bands.py  test_dft_silicon_eos.py  test_dft_time_reversal.py  test_diagnostics.py  test_energy_decomposition.py  test_ewald_reference.py  test_force_scopes.py  test_forcefields.py  test_fused_lj_kernel.py  test_gbsa.py  test_gpcrmd_acquisition.py  test_gpcrmd_pme_parity.py  (+40 more)
tests/fixtures/: dft_reference_cases.json
vendors/: README.md  vendor-lock.json
(+311 files in other folders)
