[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-atomistic"
version = "0.1.0"
description = "Apple Silicon-native atomistic simulation experiments built on MLX and Metal."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [
  { name = "mlx-atomistic contributors" },
]
dependencies = [
  "mlx>=0.31.1",
  "numpy>=2.0",
  "scipy>=1.14",
]

[project.optional-dependencies]
notebook = [
  "ipykernel>=6.29",
  "jupyterlab>=4.3",
]
viz = [
  "ase>=3.24",
  "matplotlib>=3.9",
  "plotly>=5.24",
  "py3dmol>=2.4",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "ruff>=0.8",
]

[tool.uv]
package = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
exclude = ["vendors", ".venv"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
