[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-atomistic"
version = "0.2.0"
description = "Apple Silicon-native atomistic simulation experiments built on MLX and Metal."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [
  { name = "mlx-atomistic contributors" },
]
dependencies = [
  "mlx>=0.31.1",
  "numpy>=2.0",
  "scipy>=1.14",
]

[project.scripts]
mlx-atomistic-benchmark = "mlx_atomistic.benchmarks.md_performance:main"

[project.optional-dependencies]
notebook = [
  "ipykernel>=6.29",
  "jupyterlab>=4.3",
]
prep = [
  "gemmi>=0.7",
  "parmed>=4,<5",
  "rdkit>=2026.3.1",
]
viz = [
  "ase>=3.24",
  "ipykernel>=6.29",
  "ipywidgets>=8.1",
  "jupyterlab>=4.3",
  "matplotlib>=3.9",
  "mdanalysis>=2.10.0",
  "mdtraj>=1.11.1.post1",
  "nglview>=4.0.1",
  "pandas>=2.2",
  "plotly>=5.24",
  "prolif>=2.1.0",
  "py3dmol>=2.4",
  "rdkit>=2026.3.1",
]

[dependency-groups]
# Dev/reference engines stay out of project.dependencies. OpenMM is a PyPI
# reference wheel; LAMMPS is locally built from the upstream source package with
# GPU/OpenCL enabled by the tool.uv settings below.
dev = [
  "lammps>=2025.7.22.4.0",
  "mpich>=5.0.1",
  "openmm>=8.5.1",
  "pytest>=8.3",
  "ruff>=0.8",
]

[tool.uv]
package = true
no-binary-package = ["lammps"]
config-settings-package = { lammps = { "cmake.define.PKG_GPU" = "ON", "cmake.define.GPU_API" = "opencl", "cmake.define.GPU_PREC" = "single" } }

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_atomistic"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
exclude = ["vendors", ".venv"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
