[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlx-atomistic"
version = "0.0.1"
description = "Apple Silicon-native atomistic simulation experiments built on MLX and Metal."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = { text = "MIT" }
authors = [
  { name = "mlx-atomistic contributors" },
]
keywords = [
  "apple-silicon",
  "atomistic-simulation",
  "density-functional-theory",
  "metal",
  "mlx",
  "molecular-dynamics",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS :: MacOS X",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
  "Typing :: Typed",
]
dependencies = [
  "mlx>=0.31.1",
  "numpy>=2.0",
  "scipy>=1.14",
]

[project.urls]
Documentation = "https://appautomaton.github.io/mlx-atomistic/"
Source = "https://github.com/appautomaton/mlx-atomistic"
Issues = "https://github.com/appautomaton/mlx-atomistic/issues"

[project.scripts]
mlx-atomistic-benchmark = "mlx_atomistic.benchmarks.md_performance:main"

[project.optional-dependencies]
notebook = [
  "ipykernel>=6.29",
  "jupyterlab>=4.3",
]
prep = [
  "gemmi>=0.7",
  "parmed>=4,<5",
  "rdkit>=2026.3.1",
]
viz = [
  "ase>=3.24",
  "ipykernel>=6.29",
  "ipywidgets>=8.1",
  "jupyterlab>=4.3",
  "matplotlib>=3.9",
  "mdanalysis>=2.10.0",
  "mdtraj>=1.11.1.post1",
  "nglview>=4.0.1",
  "pandas>=2.2",
  "plotly>=5.24",
  "prolif>=2.1.0",
  "py3dmol>=2.4",
  "rdkit>=2026.3.1",
]

[dependency-groups]
# Test tooling only — light, no reference engines. Used by the fast CI lane so it
# never has to build LAMMPS. pytest-xdist stays available for local sharding.
test = [
  "pytest>=8.3",
  "pytest-cov>=5",
  "pytest-xdist>=3",
  "ruff>=0.8",
]
# Reference engines stay out of project.dependencies. OpenMM is a PyPI reference
# wheel; LAMMPS is locally built from the upstream source package with GPU/OpenCL
# enabled by the tool.uv settings below. Heavy — only needed for reference/full runs.
reference = [
  "lammps>=2025.7.22.4.0",
  "mpich>=5.0.1",
  "openmm>=8.5.1",
]
# Full dev environment = test tooling + reference engines.
dev = [
  { include-group = "test" },
  { include-group = "reference" },
]
# Docs tooling. Griffe statically parses the package source (no import, no MLX),
# so the API-reference generator runs anywhere — including Linux Pages CI via
# `uv run --no-project --with griffe`.
docs = [
  "griffe>=1.5",
]

[tool.uv]
package = true
default-groups = ["test"]
no-binary-package = ["lammps"]
config-settings-package = { lammps = { "cmake.define.PKG_GPU" = "ON", "cmake.define.GPU_API" = "opencl", "cmake.define.GPU_PREC" = "single" } }

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_atomistic"]
exclude = [
  "**/__pycache__/**",
  "**/*.py[cod]",
]

[tool.hatch.build.targets.sdist]
# Keep the PyPI source distribution focused on the Python package. Hatchling
# still force-includes root VCS exclusion files in sdists as build provenance.
only-include = [
  "pyproject.toml",
  "README.md",
  "LICENSE",
  "src/mlx_atomistic",
]
exclude = [
  "**/__pycache__/**",
  "**/*.py[cod]",
]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
markers = [
  "slow: long-running test (>~1s); excluded from the fast CI lane",
  "integration: multi-component end-to-end flow",
  "reference: requires an external reference engine (openmm/lammps); run with --run-reference",
  "data: requires a heavy/gitignored dataset; run with --run-data",
  "gpu: requires a Metal GPU; skipped if unavailable",
]

[tool.ruff]
exclude = ["vendors", ".venv"]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# Docstrings: D417 welds Args↔signature sync (every documented Args param must be
# described); D101/D102/D103 weld *presence* — every public class/method/function
# on the docs surface must have a docstring. The presence rules are scoped (see
# per-file-ignores) to the package's documented API; prep/, benchmarks/, tests/,
# and scripts/ are internal tooling and excluded, matching the docs generator's
# SKIP set. gen_api_docs.py adds the complementary drift guard on removed params.
select = ["E", "F", "I", "UP", "B", "SIM", "D101", "D102", "D103", "D417"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Presence rules apply only to the documented public API (what the docs site
# renders). These trees are internal/tooling and not on the site.
"src/mlx_atomistic/prep/**" = ["D101", "D102", "D103"]
"src/mlx_atomistic/benchmarks/**" = ["D101", "D102", "D103"]
"tests/**" = ["D101", "D102", "D103"]
"scripts/**" = ["D101", "D102", "D103"]
